Fixed getBestCustomer